example4/deployment.yaml
kind: List
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: traefik
    name: status
  spec:
    rules:
    - host: observability.<your-domain>
      http:
        paths:
        - backend:
            serviceName: httpbin-svc
            servicePort: 80
- apiVersion: v1
  kind: Service
  metadata:
    name: httpbin-svc
    annotations:
      prometheus.io/scrape: "true" # <-- for prometheus to scrape
      prometheus.io/path: "/stats/prometheus" # <-- this is the URL envoy exposes metrics on
      prometheus.io/port: "9901"   # <-- this the the port envoy's admin interface listens to (defined in the configmap)    
  spec:
    ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 10000
    - port: 9901
      name: metrics
      protocol: TCP
      targetPort: 9901
    selector:
      app: httpbin
    type: ClusterIP
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: httpbin    
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: httpbin
    name: nginx-deployment
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: httpbin
    template:
      metadata:
        labels:
          app: httpbin
      spec:
        containers:
        - name: httpbin
          image: docker.io/kennethreitz/httpbin
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
        - name: envoy
          image: envoyproxy/envoy:v1.18.2
          ports:
          - containerPort: 10000 
            protocol: TCP          
          - containerPort: 9901 
            protocol: TCP          
          command: ["envoy"]
          args: ["-c", "/etc/envoy.yaml", "--service-cluster", "$(POD_NAME)"]
          env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          resources:
              requests:
                cpu: 50m
                memory: 50Mi
              limits:
                cpu: 100m
                memory: 256Mi       
          volumeMounts:
          - name: envoy-config
            mountPath: /etc/envoy.yaml
            subPath: envoy.yaml
        - name: toxiproxy
          image: shopify/toxiproxy:2.1.4  
          command: ["/go/bin/toxiproxy"]
          args: ["-host=0.0.0.0", "--config", "/config/toxiproxy.json"]
          volumeMounts:
          - name: toxiproxy-config
            mountPath: /config/toxiproxy.json
            subPath: toxiproxy.json

        nodeSelector:
          beta.kubernetes.io/arch: amd64                        
        volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
        - name: toxiproxy-config
          configMap:
            name: toxiproxy-config
